gitops/manifests/hoarder/install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hoarder
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: hoarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
        app.kubernetes.io/name: hoarder
    spec:
      containers:
        - name: web
          image: ghcr.io/karakeep-app/karakeep:0.32.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: hoarder-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hoarder-internal
  namespace: hoarder
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hoarder.local.timmybtech.com`)
      kind: Rule
      services:
        - name: web
          port: 3000
      # middlewares:
      #   - name: crowdsec-bouncer
      #     namespace: traefik
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hoarder-public
  namespace: hoarder
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hoarder.timmybtech.com`)
      kind: Rule
      services:
        - name: web
          port: 3000
  tls:
    secretName: timmybtech-com-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
        - name: chrome
          image: gcr.io/zenika-hub/alpine-chrome:124
          command:
            - chromium-browser
            - --headless
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  selector:
    app: chrome
  ports:
    - protocol: TCP
      port: 9222
      targetPort: 9222
  type: ClusterIP
